# aycfggen

./: Cargo.toml  README.md
docs/: config-extract-high-level.md  high-level.md
docs/examples/set1/config-elements/logging-standard/: apply.txt  unapply.txt
docs/examples/set1/config-templates/: access-switch.conf
docs/examples/set1/expected-output/: switch1.txt
docs/examples/set1/hardware-templates/WS-C3560-24TS/: ports.json
docs/examples/set1/logical-devices/switch1/: config.json
docs/examples/set1/services/access-vlan10/: port-config.txt  svi-config.txt
docs/examples/set1/services/trunk/: port-config.txt
docs/examples/set2/config-elements/ntp-config/: apply.txt  unapply.txt
docs/examples/set2/config-templates/: router-base.conf
docs/examples/set2/expected-output/: router1.txt
docs/examples/set2/hardware-templates/NIM-2FXS/: ports.json
docs/examples/set2/logical-devices/router1/: config.json
docs/examples/set2/services/voice/: port-config.txt  svi-config.txt
docs/examples/set2/services/wan-link/: port-config.txt  svi-config.txt
docs/specs/: cli.md  compilation.md  data-model.md  implementation-plan.md  process.md
docs/specs/extraction/: config-extraction.md
src/: cli.rs  compile.rs  diff.rs  extract.rs  extract_cli.rs  fs_sinks.rs  fs_sources.rs  hardware_discovery.rs  interface_name.rs  ios_parser.rs  lib.rs  main.rs  model.rs  output.rs  port_decomposition.rs  round_trip.rs  show_parsers.rs  sinks.rs  sources.rs  svi_extraction.rs  template_builder.rs  validate.rs  variable_extraction.rs  variables.rs
tests/: round_trip_integration.rs
