[package]
name = "aycfggen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ayclic = { path = "../ayclic/ayclic" }
mustache = { path = "../rust-mustache" }
